# LicenseChekcer

./: .env.example  .gitignore  API_EXAMPLES.md  App.tsx  README.md  SETUP_DATABASE.md  i18n.ts  index.html  metadata.json  nitro.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  types.ts  vercel.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: test.yml
.vercel/output/: nitro.json
api/: audit-licenses.ts
components/: AuditTable.tsx  AuditView.tsx  LicenseGuide.tsx  LicenseSelector.tsx  SummaryCards.tsx  VisualTree.tsx
docs/: README.md  architecture.md  deployment.md  setup.md
public/: manifest.json  openapi.json  robots.txt  sitemap.xml
scripts/: setup-db.sh
server/api/: audit-licenses.ts  audit.ts  check.ts  parse.ts  scan-repo.ts
server/middleware/: cors.ts  rateLimit.ts
server/utils/: scanRepository.ts
services/: cacheService.ts  dependencyParser.ts  geminiService.ts  localDatabase.ts
src/: App.tsx  env.ts  i18n.ts  routeTree.gen.ts  router.tsx  styles.css  types.ts
src/components/: AuditTable.tsx  AuditView.tsx  Layout.tsx  LicenseGuide.tsx  LicenseSelector.tsx  VisualTree.tsx
src/lib/: supabase.ts
src/routes/: __root.tsx  api.tsx  guide.tsx  index.tsx  selector.tsx
src/services/: auditService.ts  cacheService.ts  dependencyParser.test.ts  dependencyParser.ts  geminiService.ts  localDatabase.ts
src/services/__tests__/fixtures/rust/: Cargo.toml
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
tests/: api.test.ts  dependencyParser.test.ts
(+45 files in other folders)
