[package]
name = "license-checker"
version = "0.1.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]
description = "A license checking tool"
license = "MIT"
repository = "https://github.com/example/license-checker"

[lib]
name = "license_checker"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = "4.4.0"
tokio = { version = "1.35.0", features = ["full", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
